--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "framework"]
-	path = framework
-	url = git@github.com:rpetrich/theos.git
+    path = framework
+    url = https://github.com/rpetrich/theos.git
